// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should handle "icon" and "iconPosition" props 1`] = `
<button
  className="button-base button-primary button-m button-m-with-start-icon"
  data-testid="button"
>
  <ForwardRef(SearchSVG)
    className="icon icon-start"
    height={24}
    width={24}
  />
  Икать
</button>
`;

exports[`<Button /> should handle "icon" and "iconPosition" props 2`] = `
<button
  className="button-base button-primary button-m button-m-with-end-icon"
  data-testid="button"
>
  Икать
  <ForwardRef(SearchSVG)
    className="icon icon-end"
    height={24}
    width={24}
  />
</button>
`;

exports[`<Button /> should handle "icon" and "iconPosition" props 3`] = `
<button
  className="button-base button-primary button-m button-m-with-start-icon"
  data-testid="button"
>
  <ForwardRef(SearchSVG)
    className="icon icon-start"
    height={24}
    width={24}
  />
  Икать
</button>
`;

exports[`<Button /> should handle "size" prop 1`] = `
<button
  className="button-base button-primary button-s text-button-s"
  data-testid="button"
>
  Отмена
</button>
`;

exports[`<Button /> should handle "size" prop 2`] = `
<button
  className="button-base button-primary button-medium text-button-medium"
  data-testid="button"
>
  Отмена
</button>
`;

exports[`<Button /> should render icon button 1`] = `
<button
  className="button-base button-primary button-m"
  data-testid="button"
>
  <ForwardRef(PlusSVG)
    className="icon"
    height={24}
    width={24}
  />
</button>
`;

exports[`<Button /> should render icon button 2`] = `
<button
  className="button-base button-primary button-m"
  data-testid="button"
>
  <ForwardRef(PlusSVG)
    className="icon"
    height={24}
    width={24}
  />
</button>
`;

exports[`<Button /> should render secondary button 1`] = `
<button
  className="button-base button-secondary button-m text-button-m"
  data-testid="button"
>
  Отмена
</button>
`;

exports[`<Button /> should renders without props 1`] = `
<button
  className="button-base button-primary button-m text-button-m"
  data-testid="button"
>
  Кнопка
</button>
`;
